# INRIA_poc

./: MANIFEST.in  README.md  hal_acentauri_hceres_poc.py  pyproject.toml  requirements.txt
data/: acentauri_members.example.csv  theme_mapping.example.csv
presentation/: README.md  generate_narrated_video.py  hal_acentauri_hceres_poc_presentation.tex
tests/: test_static_smoke.py
webapp/: app.js  export.js  index.html  rapport_hceres_acentauri_2026.md  rapport_hceres_acentauri_2026.tex  style.css
webapp/data/: annual_document_type_statistics.csv  annual_full_text_statistics.csv  annual_statistics.csv  author_statistics.csv  collaboration_summary.csv  document_type_statistics.csv  hceres_summary_indicators.csv  open_science_statistics.csv  partner_country_ranking.csv  partner_laboratory_or_institution_ranking.csv  venue_statistics.csv  venue_summary.csv
