[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hal-acentauri-hceres-poc"
version = "0.1.0"
description = "Deterministic HAL bibliometric pipeline for ACENTAURI HCERES-style reporting."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "ACENTAURI / INRIA POC maintainers" }
]
dependencies = [
  "requests>=2.28",
  "pandas>=1.5",
  "numpy>=1.23",
  "matplotlib>=3.6",
  "networkx>=2.8",
  "rapidfuzz>=3.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.scripts]
hal-acentauri-hceres-poc = "hal_acentauri_hceres_poc:main"

[tool.setuptools]
py-modules = ["hal_acentauri_hceres_poc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
